<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView android:text="@string/perfil__ajustes" android:textSize="20sp" android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/md_theme_onSecondary"/>
    <TextView android:layout_marginTop="12dp" android:text="@string/nombre_javier_sep_lveda"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/md_theme_primary"/>
    <TextView android:layout_marginTop="8dp" android:text="@string/notificaciones_activadas"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/md_theme_primary"/>
    <TextView android:layout_marginTop="8dp" android:text="@string/divisa_clp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/md_theme_primary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_out"
        android:text="@string/cerrar_sesi_n"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
