<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.SplitDrive.Card">

    <LinearLayout
        android:padding="12dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="@color/text_secondary">

        <TextView
            android:id="@+id/tv_expense_category"
            android:text="@string/gasolina"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/md_theme_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_expense_amount"
            android:text="@string/_40_000"
            android:layout_marginTop="4dp"
            android:textColor="@color/md_theme_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary">

            <TextView
                android:id="@+id/tv_expense_paidby"
                android:text="@string/pag_ana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_primary"/>

            <TextView
                android:id="@+id/tv_expense_date"
                android:text="@string/_10_nov"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_primary"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
